...
                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="748" verticalCompressionResistancePriority="752" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GLd-IN-cWl" userLabel="StartOrPause Button">
                                <rect key="frame" x="52" y="510" width="100" height="100"/>
                                <accessibility key="accessibilityConfiguration" identifier="StartTimerInStopwatchButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="GLd-IN-cWl" secondAttribute="height" multiplier="1:1" id="rpf-X4-W3n"/>
...
                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="748" verticalCompressionResistancePriority="748" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aLn-OF-lG8" userLabel="StopOrReset Button">
                                <rect key="frame" x="223.5" y="510" width="100" height="100"/>
                                <accessibility key="accessibilityConfiguration" identifier="StopTimerInStopwatchButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="100" id="UKv-Ov-n1o"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aCY-EI-Zeg" userLabel="Sleep Button">
                                <rect key="frame" x="319" y="72" width="40" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="SleepModeButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="40" id="2Yy-qr-jLX"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="255" horizontalCompressionResistancePriority="752" verticalCompressionResistancePriority="753" text="11:00.0" textAlignment="center" lineBreakMode="clip" minimumFontSize="35" translatesAutoresizingMaskIntoConstraints="NO" id="VZ8-qB-YtK" userLabel="
                                <rect key="frame" x="102.5" y="311" width="171.5" height="91.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="RunningSplitTimeLabel"/>
                                <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="100"/>
                                <color key="textColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="253" verticalHuggingPriority="255" horizontalCompressionResistancePriority="752" verticalCompressionResistancePriority="752" text="11:00.0" textAlignment="center" lineBreakMode="clip" minimumFontSize="60" translatesAutoresizingMaskIntoConstraints="NO" id="781-Qj-Uxr" 
                                <rect key="frame" x="16" y="120" width="343" height="183"/>
                                <accessibility key="accessibilityConfiguration" identifier="RunningTimeLabel"/>
                                <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="200"/>
                                <color key="textColor" red="0.0078431372550000003" green="0.21960784310000001" blue="0.31764705879999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Stopwatch" id="BR7-Ls-ygH">
                        <barButtonItem key="rightBarButtonItem" id="8go-Pi-hnB">
                            <button key="customView" hidden="YES" opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="QOR-Tj-Edc">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="bottom" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bVw-DJ-a8q">
                                <rect key="frame" x="319" y="72" width="40" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="ChooseMelodyButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="7kv-fj-SvT"/>
...
                            <button opaque="NO" contentMode="redraw" verticalCompressionResistancePriority="745" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GP3-qp-LIt">
                                <rect key="frame" x="138" y="510" width="100" height="100"/>
                                <accessibility key="accessibilityConfiguration" identifier="StartTimerInSettingsButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="GP3-qp-LIt" secondAttribute="height" multiplier="1:1" id="00O-mE-0t0"/>
...
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M5i-n4-VjI">
                                            <rect key="frame" x="50" y="8" width="317" height="27"/>
                                            <accessibility key="accessibilityConfiguration" identifier="MelodyNameLabel"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Sounds for Alarm" id="efl-rS-RKJ">
                        <barButtonItem key="rightBarButtonItem" title="Done" id="P4J-V1-T5f">
                            <connections>
...
                            <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="755" contentHorizontalAlignment="right" contentVerticalAlignment="bottom" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O0f-kW-qAU">
                                <rect key="frame" x="319" y="72" width="40" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="SoundOnOffButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="40" id="Bky-EQ-bsR"/>
...
                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="746" verticalCompressionResistancePriority="746" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gwH-PY-rip">
                                <rect key="frame" x="16" y="422" width="80" height="80"/>
