...
    
    struct KeysForMelodies {
        static let SimpleSound = NSLocalizedString("simple sound 1", comment: "")
        static let SimpleSound2 = NSLocalizedString("simple sound 2", comment: "")
        static let Drums1 = NSLocalizedString("drums 1", comment: "")
        static let Drums2 = NSLocalizedString("drums 2", comment: "")
        static let FretlessBass = NSLocalizedString("fretless bass", comment: "")
        static let Piano1 = NSLocalizedString("piano 1", comment: "")
        static let Piano2 = NSLocalizedString("piano 2", comment: "")
        static let Piano3 = NSLocalizedString("piano 3", comment: "")
        static let Piano4 = NSLocalizedString("piano 4", comment: "")
        static let Piano5 = NSLocalizedString("piano 5", comment: "")
        static let PianoSynth = NSLocalizedString("synthesizer", comment: "")
...
